--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">LuotoneCard</string>
+    <string name="title_activity_main_screen">MainScreen</string>
+    <string name="contacts">Contacts</string>
+    <string name="camera">Camera</string>
+    <string name="newContact">New Contact</string>
+    <string name="myCard">My Card</string>
+    <string name="uploadCard">Upload Card</string>
+    <string name="edit">Edit</string>
 </resources>
